--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Dec 2020 11:38:44 GMT
+// Generated on Mon, 28 Dec 2020 08:32:21 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -410,3 +410,10 @@ $sidepanel-footer-size-padding: 16px;
 $table-color-border-width: 1px;
 $table-color-row-padding-vertical: 8px;
 $table-color-row-padding-horizontal: 16px;
+$tabs-color-border: #B3B3B3;
+$tabs-color-state-active: #338FCC;
+$tabs-size-height: 40px;
+$tabs-size-highlight-height: 4px;
+$tabs-size-padding-horizontal: 16px;
+$tabs-size-border-width: 1px;
+$tabs-size-border-radius: 3px;
