--- a/packages/mosaic/tags/tag-list.scss
+++ b/packages/mosaic/tags/tag-list.scss
@@ -1,3 +1,4 @@
+@import '../design-tokens/index';
 
 
 .mc-tag-list {
@@ -17,17 +18,17 @@
     flex: 1 1 100%;
 
     min-width: 0;
-    min-height: 28px;
+    min-height: $tag-list-size-min-height;
 
-    padding: 1px 6px;
+    padding: $tag-list-size-padding;
 
     & .mc-tag-input {
         max-width: 100%;
 
         flex: 1 1 auto;
 
-        height: 22px;
-        margin: 2px 4px;
+        height: $tag-input-size-height;
+        margin: $tag-input-size-margin;
     }
 }
 
