--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 28 Dec 2020 10:44:26 GMT
+// Generated on Mon, 28 Dec 2020 11:06:57 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -450,3 +450,15 @@ $tag-input-size-height: 22px;
 $tag-input-size-margin: 2px 4px;
 $textarea-size-min-height: 50px;
 $textarea-size-padding: 5px 16px;
+$toggle-color-border: #B3B3B3;
+$toggle-color-background: linear-gradient(to bottom, #E6E6E6, #F0F0F0);
+$toggle-color-circle-border: #B3B3B3;
+$toggle-color-circle-background: linear-gradient(to bottom, white, #E6E6E6);
+$toggle-color-state-focused: inset 0 0 0 1px white, 0 0 0 2px #338FCC;
+$toggle-size-height: 16px;
+$toggle-size-width: 28px;
+$toggle-size-border-radius: 9px;
+$toggle-size-label-margin: 8px;
+$toggle-small-size-height: 14px;
+$toggle-small-size-width: 24px;
+$toggle-small-size-border-radius: 8px;
