--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 28 Dec 2020 11:06:57 GMT
+// Generated on Mon, 28 Dec 2020 11:45:40 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -462,3 +462,13 @@ $toggle-size-label-margin: 8px;
 $toggle-small-size-height: 14px;
 $toggle-small-size-width: 24px;
 $toggle-small-size-border-radius: 8px;
+$tooltip-color-background: #4D4D4D;
+$tooltip-color-color: white;
+$tooltip-color-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+$tooltip-size-max-width: 240px;
+$tooltip-size-min-height: 32px; // 16px for font + 16px for padding = total 32px
+$tooltip-size-border-radius: 3px;
+$tooltip-size-arrow-size: 12px;
+$tooltip-size-arrow-width: 5px;
+$tooltip-size-padding: 8px 16px;
+$tooltip-size-distance: 5px + 4px;
