--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 28 Dec 2020 11:45:40 GMT
+// Generated on Mon, 28 Dec 2020 12:21:24 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -472,3 +472,7 @@ $tooltip-size-arrow-size: 12px;
 $tooltip-size-arrow-width: 5px;
 $tooltip-size-padding: 8px 16px;
 $tooltip-size-distance: 5px + 4px;
+$tree-color-background: #4D4D4D;
+$tree-size-border-width: 2px;
+$tree-size-node-height: 28px;
+$tree-size-node-padding: 28px;
